Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-87314

src/quick3d/imports/scene3d/scene3drenderer.cpp:335:29: error: ‘QPlatformInterface’ has not been declared

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P0: Blocker P0: Blocker
    • None
    • 6.0.0 Beta1
    • Qt3D
    • None

      /CMakeFiles/qtquickscene3dplugin.dir/scene3drenderer.cpp.o -MF src/quick3d/imports/scene3d/CMakeFiles/qtquickscene3dplugin.dir/scene3drenderer.cpp.o.d -o src/quick3d/imports/scene3d/CMakeFiles/qtquickscene3dplugin.dir/scene3drenderer.cpp.o -c src/quick3d/imports/scene3d/scene3drenderer.cpp
       src/quick3d/imports/scene3d/scene3drenderer.cpp: In member function ‘virtual void Qt3DRender::Scene3DRenderer::GLRenderer::beforeSynchronize(Qt3DRender::Scene3DRenderer*)’:
       src/quick3d/imports/scene3d/scene3drenderer.cpp:335:29: error: ‘QPlatformInterface’ has not been declared
      

      Build log: https://testresults.qt.io/logs/qt/qt3d/c48cd5908e1bf73f96d8aaf3837264d54ca85794/LinuxSLES_15x86_64LinuxSLES_15x86_64GCCqtci-linux-SLES-15-x86_64-27b202DisableTests_Sccache/6a30f363858a5bc05443fa2f20e40442a9cee564/build_1602236503/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qt3d/tasks/1602236162

      Tested changes (refs/builds/qtci/dev/1602236160):
      https://codereview.qt-project.org/c/qt/qt3d/+/316854/1 Update dependencies on 'dev' in qt/qt3d

        For Gerrit Dashboard: QTBUG-87314
        # Subject Branch Project Status CR V

            mkrus Mike Krus
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes