Adapt to platform API rename

Task-number: QTBUG-87314
Change-Id: I0b0321a7a592ca4350cffcd5e2aaf3441cbf4735
Reviewed-by: James Turner <james.turner@kdab.com>
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>